--- a/Taste&Flavor/app/src/main/res/layout/fragment_profile.xml
+++ b/Taste&Flavor/app/src/main/res/layout/fragment_profile.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="layout.ProfileFragment"
-    android:background="@color/colorProfile">
+    tools:context=".ProfileFragment"
+    android:background="@color/colorFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -18,46 +18,104 @@
             android:layout_width="102dp"
             android:layout_height="102dp"
             app:srcCompat="@mipmap/ic_launcher_round"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="16dp"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            android:layout_marginLeft="141dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/textTittle"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" />
 
 
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
+             android:textColor="@color/colorPrimaryDark"
              android:text="@string/Profile"
              android:textSize="30dp"
-             android:textStyle="bold|italic"
              android:id="@+id/textTittle"
              app:layout_constraintTop_toTopOf="parent"
-             android:layout_marginTop="5dp"
-             android:layout_marginRight="8dp"
+             android:layout_marginTop="25dp"
+             android:layout_marginRight="138dp"
              app:layout_constraintRight_toRightOf="parent"
-             app:layout_constraintLeft_toRightOf="@+id/imageViewProfile"
              android:layout_marginLeft="8dp"
-             app:layout_constraintHorizontal_bias="0.084" />
+             app:layout_constraintLeft_toLeftOf="parent"
+             app:layout_constraintHorizontal_bias="1.0" />
 
         <TextView
             android:id="@+id/textViewNameProfile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Jerson"
-            app:layout_constraintLeft_toRightOf="@+id/imageViewProfile"
-            android:layout_marginLeft="45dp"
+            android:layout_width="202dp"
+            android:layout_height="28dp"
+            android:text="Jerson Cuchillo"
+            android:gravity="center"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="20dp"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textTittle" />
+            app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />
 
         <TextView
             android:id="@+id/textViewLastnameProfile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="202dp"
+            android:layout_height="22dp"
             android:text="López Castaño"
-            android:layout_marginTop="10dp"
+            android:textColor="@color/colorPrimaryDark"
+            android:gravity="center"
+            android:layout_marginTop="8dp"
+            android:textSize="20dp"
             app:layout_constraintTop_toBottomOf="@+id/textViewNameProfile"
-            app:layout_constraintLeft_toRightOf="@+id/imageViewProfile"
-            android:layout_marginLeft="45dp" />
-    </android.support.constraint.ConstraintLayout>
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent" />
+
+         <TextView
+             android:text="jerson.lopez@udea.edu.co"
+             android:gravity="center"
+             android:textSize="20dp"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_marginRight="8dp"
+             app:layout_constraintRight_toRightOf="parent"
+             android:layout_marginLeft="8dp"
+             app:layout_constraintLeft_toLeftOf="parent"
+             android:layout_marginTop="8dp"
+             android:textColor="@color/colorPrimaryDark"
+             app:layout_constraintTop_toBottomOf="@+id/textViewLastnameProfile"
+             android:id="@+id/textView2"
+             app:layout_constraintHorizontal_bias="0.503" />
+
+         <TextView
+             android:text="Medellín"
+             android:textSize="20dp"
+             android:gravity="center"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_marginRight="8dp"
+             app:layout_constraintRight_toRightOf="parent"
+             android:textColor="@color/colorPrimaryDark"
+             android:layout_marginLeft="8dp"
+             app:layout_constraintLeft_toLeftOf="parent"
+             android:layout_marginTop="8dp"
+             app:layout_constraintTop_toBottomOf="@+id/textView2"
+             android:id="@+id/textView4" />
+
+         <ImageView
+             android:id="@+id/imageView3"
+             android:layout_width="80dp"
+             android:layout_height="80dp"
+             app:srcCompat="@mipmap/ic_profile"
+             android:layout_marginTop="8dp"
+             app:layout_constraintTop_toBottomOf="@+id/textView4"
+             app:layout_constraintBottom_toBottomOf="parent"
+             android:layout_marginBottom="8dp"
+             android:layout_marginRight="8dp"
+             app:layout_constraintRight_toRightOf="parent"
+             android:layout_marginLeft="8dp"
+             app:layout_constraintLeft_toLeftOf="parent" />
+     </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
