--- a/Taste&Flavor/app/src/main/res/values/colors.xml
+++ b/Taste&Flavor/app/src/main/res/values/colors.xml
@@ -2,9 +2,7 @@
 <resources>
     <color name="colorPrimary">#f44336</color>
     <color name="colorPrimaryDark">#c62828</color>
-    <color name="colorAccent">#ef9a9a</color>
+    <color name="colorAccent">#f1b3b3</color>
     <color name="fontColorLogin">#ffffff</color>
-    <color name="colorProfile">#9aefd1</color>
-    <color name="colorFavorite">#bf9aef</color>
-    <color name="colorSettings">#ef9ac7</color>
+    <color name="colorFragment">#ffedee</color>
 </resources>
