--- a/Frontend/app/src/main/res/layout/fragment_about.xml
+++ b/Frontend/app/src/main/res/layout/fragment_about.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorFragment"
-    tools:context=".AboutFragment">
+    tools:context=".views.AboutFragment">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
