--- a/Frontend/app/src/main/res/layout/activity_register.xml
+++ b/Frontend/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/img_show"
             android:layout_width="119dp"
             android:layout_height="113dp"
             android:layout_marginLeft="35dp"
@@ -71,80 +71,6 @@
 
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_email"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/input_layout_lastname">
-
-            <EditText
-                android:id="@+id/editTextEmailRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="Correo"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/input_layout_email"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp">
-
-            <EditText
-                android:id="@+id/editTextPasswordRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="Contraseña"
-                android:imeOptions="actionNext"
-                android:inputType="textPassword" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_cpassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/input_layout_password"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp">
-
-            <EditText
-                android:id="@+id/editTextCPasswordRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="Confirmar contraseña"
-                android:imeOptions="actionNext"
-                android:inputType="textPassword" />
-
-        </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_ubication"
@@ -155,7 +81,7 @@
             android:layout_marginTop="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/input_layout_cpassword"
+            app:layout_constraintTop_toBottomOf="@+id/input_layout_lastname"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp">
 
@@ -193,12 +119,11 @@
             android:layout_height="wrap_content"
             android:text="Seleccionar"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="72dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginTop="62dp"
+            android:layout_marginRight="84dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toRightOf="@+id/imageView2"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintHorizontal_bias="0.047" />
+            app:layout_constraintLeft_toRightOf="@+id/img_show"
+            android:layout_marginLeft="8dp" />
 
     </android.support.constraint.ConstraintLayout>
 
