--- a/Frontend/app/src/main/res/layout/fragment_profile.xml
+++ b/Frontend/app/src/main/res/layout/fragment_profile.xml
@@ -116,6 +116,22 @@
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginLeft="8dp"
              app:layout_constraintLeft_toLeftOf="parent" />
+
+         <Button
+             android:id="@+id/updateProfile"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="Actualizar"
+             android:layout_marginRight="8dp"
+             app:layout_constraintRight_toRightOf="parent"
+             android:layout_marginLeft="8dp"
+             app:layout_constraintLeft_toLeftOf="parent"
+             app:layout_constraintHorizontal_bias="0.971"
+             app:layout_constraintBottom_toBottomOf="parent"
+             android:layout_marginBottom="8dp"
+             app:layout_constraintTop_toTopOf="parent"
+             android:layout_marginTop="8dp"
+             app:layout_constraintVertical_bias="0.982" />
      </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
