--- a/Frontend/app/src/main/res/layout/fragment_profile.xml
+++ b/Frontend/app/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.ProfileFragment"
+    tools:context=".views.user.ProfileFragment"
     android:background="@color/colorFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -44,9 +44,9 @@
 
         <TextView
             android:id="@+id/textViewNameProfile"
-            android:layout_width="202dp"
-            android:layout_height="28dp"
-            android:text="Jerson Cuchillo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Debe actualizar perfil"
             android:gravity="center"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="20dp"
@@ -59,9 +59,9 @@
 
         <TextView
             android:id="@+id/textViewLastnameProfile"
-            android:layout_width="202dp"
-            android:layout_height="22dp"
-            android:text="López Castaño"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Debe actualizar perfil"
             android:textColor="@color/colorPrimaryDark"
             android:gravity="center"
             android:layout_marginTop="8dp"
@@ -73,7 +73,7 @@
             app:layout_constraintRight_toRightOf="parent" />
 
          <TextView
-             android:text="jerson.lopez@udea.edu.co"
+             android:text="Debe actualizar perfil"
              android:gravity="center"
              android:textSize="20dp"
              android:layout_width="wrap_content"
@@ -85,11 +85,11 @@
              android:layout_marginTop="8dp"
              android:textColor="@color/colorPrimaryDark"
              app:layout_constraintTop_toBottomOf="@+id/textViewLastnameProfile"
-             android:id="@+id/textView2"
+             android:id="@+id/textViewEmailProfile"
              app:layout_constraintHorizontal_bias="0.503" />
 
          <TextView
-             android:text="Medellín"
+             android:text="Debe actualizar perfil"
              android:textSize="20dp"
              android:gravity="center"
              android:layout_width="wrap_content"
@@ -100,8 +100,8 @@
              android:layout_marginLeft="8dp"
              app:layout_constraintLeft_toLeftOf="parent"
              android:layout_marginTop="8dp"
-             app:layout_constraintTop_toBottomOf="@+id/textView2"
-             android:id="@+id/textView4" />
+             app:layout_constraintTop_toBottomOf="@+id/textViewEmailProfile"
+             android:id="@+id/textViewCityProfile" />
 
          <ImageView
              android:id="@+id/imageView3"
@@ -109,7 +109,7 @@
              android:layout_height="80dp"
              app:srcCompat="@mipmap/ic_profile"
              android:layout_marginTop="8dp"
-             app:layout_constraintTop_toBottomOf="@+id/textView4"
+             app:layout_constraintTop_toBottomOf="@+id/textViewCityProfile"
              app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginBottom="8dp"
              android:layout_marginRight="8dp"
