--- a/Frontend/app/src/main/res/layout/fragment_setting.xml
+++ b/Frontend/app/src/main/res/layout/fragment_setting.xml
@@ -11,7 +11,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="co.edu.udea.compumovil.gr04_20172.proyecto.views.Register">
+        tools:context="co.edu.udea.compumovil.gr04_20172.proyecto.views.user.Register">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
