--- a/Frontend/app/src/main/res/values/colors.xml
+++ b/Frontend/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#f1b3b3</color>
     <color name="fontColorLogin">#ffffff</color>
     <color name="colorFragment">#ffedee</color>
+    <color name="white">#ffffff</color>
 </resources>
