details of places and foods ready

--- a/Frontend/app/src/main/res/layout/activity_add__place.xml
+++ b/Frontend/app/src/main/res/layout/activity_add__place.xml
@@ -67,7 +67,7 @@
                 android:gravity="center"
                 android:hint="Nombre"
                 android:imeOptions="actionNext"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName|textCapSentences" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -91,7 +91,7 @@
                 android:gravity="center"
                 android:hint="Telefono"
                 android:imeOptions="actionNext"
-                android:inputType="textPersonName" />
+                android:inputType="number" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -115,7 +115,7 @@
                 android:gravity="center"
                 android:hint="Descripción"
                 android:imeOptions="actionNext"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName|textCapSentences" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -139,7 +139,7 @@
                 android:gravity="center"
                 android:hint="Tipo"
                 android:imeOptions="actionNext"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName|textCapSentences" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
@@ -163,7 +163,7 @@
                 android:gravity="center"
                 android:hint="Dirección"
                 android:imeOptions="actionDone"
-                android:inputType="textPersonName" />
+                android:inputType="text|textCapSentences" />
         </android.support.design.widget.TextInputLayout>
 
         <Button
