--- a/Frontend/app/src/main/res/layout/fragment_setting.xml
+++ b/Frontend/app/src/main/res/layout/fragment_setting.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorFragment"
-    tools:context=".SettingFragment">
+    tools:context=".views.SettingFragment">
 
     <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
