--- a/Frontend/app/src/main/res/layout/fragment_main.xml
+++ b/Frontend/app/src/main/res/layout/fragment_main.xml
@@ -5,9 +5,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="co.edu.udea.compumovil.gr04_20172.proyecto.views.place.MainFragment">
 
+    <android.support.v7.widget.SearchView
+        android:id="@+id/search_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:queryHint="Buscar..."></android.support.v7.widget.SearchView>
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="46dp"
         android:clickable="true"
         android:id="@+id/rv"
         />
