--- a/Frontend/app/src/main/res/layout/card_view_place.xml
+++ b/Frontend/app/src/main/res/layout/card_view_place.xml
@@ -27,6 +27,18 @@
                 android:layout_marginRight="16dp"
                 />
 
+            <ImageView
+                android:layout_width="65px"
+                android:layout_height="65px"
+                android:src="@mipmap/ic_launcher"
+                android:id="@+id/favorite"
+                android:clickable="true"
+                android:layout_below="@+id/local_direction"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+
+
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
