--- a/Frontend/Proyecto/src/main/res/layout/nav_header_main.xml
+++ b/Frontend/Proyecto/src/main/res/layout/nav_header_main.xml
@@ -13,13 +13,14 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewND"
         android:layout_width="180dp"
         android:layout_height="80dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@drawable/logotf" />
 
     <TextView
+        android:id="@+id/nameND"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
