--- a/Frontend/Proyecto/src/main/res/layout/fragment_profile.xml
+++ b/Frontend/Proyecto/src/main/res/layout/fragment_profile.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
 
-        <ImageView
+        <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/imageViewProfile"
             android:layout_width="102dp"
             android:layout_height="102dp"
@@ -36,11 +36,10 @@
              android:id="@+id/textTittle"
              app:layout_constraintTop_toTopOf="parent"
              android:layout_marginTop="25dp"
-             android:layout_marginRight="138dp"
-             app:layout_constraintRight_toRightOf="parent"
              android:layout_marginLeft="8dp"
              app:layout_constraintLeft_toLeftOf="parent"
-             app:layout_constraintHorizontal_bias="1.0" />
+             android:layout_marginRight="8dp"
+             app:layout_constraintRight_toRightOf="parent" />
 
         <TextView
             android:id="@+id/textViewNameProfile"
@@ -70,7 +69,8 @@
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintHorizontal_bias="0.483" />
 
          <TextView
              android:text="Debe actualizar perfil"
@@ -122,6 +122,8 @@
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Actualizar"
+             android:background="@color/colorPrimary"
+             android:textColor="#ffffff"
              android:layout_marginRight="8dp"
              app:layout_constraintRight_toRightOf="parent"
              android:layout_marginLeft="8dp"
