--- a/Frontend/Proyecto/src/main/res/layout/nav_header_main.xml
+++ b/Frontend/Proyecto/src/main/res/layout/nav_header_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/nav_header_height"
+    android:layout_height="170dp"
     android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -12,25 +13,40 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
+    <com.mikhaellopez.circularimageview.CircularImageView
         android:id="@+id/imageViewND"
         android:layout_width="180dp"
         android:layout_height="80dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/logotf" />
+        app:srcCompat="@drawable/logotf"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="-27dp"
+        android:layout_marginLeft="19dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.316" />
 
     <TextView
         android:id="@+id/nameND"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Test and Flavor"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_marginTop="-8dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewND"
+        android:layout_marginLeft="2dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/emailND"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="jerson.lopez@udea.edu.co" />
+        android:text="jerson.lopez@udea.edu.co"
+        android:layout_marginLeft="2dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="-3dp"
+        app:layout_constraintTop_toBottomOf="@+id/nameND" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
