--- a/Frontend/Proyecto/src/main/res/xml/settings.xml
+++ b/Frontend/Proyecto/src/main/res/xml/settings.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <SwitchPreference
-        android:defaultValue="true"
+        android:disableDependentsState="true"
         android:key="switch"
         android:summary="conservar sesion abierta"
         android:switchTextOn="on"
