--- a/Frontend/Proyecto/src/main/res/layout/fragment_main.xml
+++ b/Frontend/Proyecto/src/main/res/layout/fragment_main.xml
@@ -9,7 +9,8 @@
         android:id="@+id/search_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:queryHint="Buscar..."></android.support.v7.widget.SearchView>
+        android:inputType="text|textCapSentences"
+        android:queryHint="Buscar por comida..."></android.support.v7.widget.SearchView>
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
