--- a/Frontend/Proyecto/src/main/res/xml/settings.xml
+++ b/Frontend/Proyecto/src/main/res/xml/settings.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <SwitchPreference
-        android:disableDependentsState="true"
         android:key="switch"
         android:summary="conservar sesion abierta"
         android:switchTextOn="on"
-        android:title="Mantener sesion"></SwitchPreference>
+        android:title="Mantener sesion"
+        app:defaultValue="true"></SwitchPreference>
 
-    <PreferenceCategory app:title="Opciones"
-        android:summary="opciones">
+    <PreferenceCategory app:title="Opciones">
         <CheckBoxPreference android:title="Notificaciones"></CheckBoxPreference>
 
     </PreferenceCategory>
